--- a/projets.css
+++ b/projets.css
@@ -11,6 +11,11 @@ body{
     background: #080808;
     color: #fff;
 }
+#header{
+    position: sticky;
+    top: 0;
+    background: #080808;
+}
 .container{
     padding: 10px 10%;
 }
@@ -52,10 +57,12 @@ nav ul li a:hover::after{
     font-weight: 600;
     color: #fff;
     margin: 30px;
+    animation: slideInleft 1s;
 }
 .text-realisation{
     margin: 20px;
     font-size: 20px;
+    animation: slideInleft 2s;
 }
 .realisation{
     background-color: #262626;
@@ -106,19 +113,35 @@ nav ul li a:hover::after{
     transition: transform 0.5s;
 }
 .card{
-    background: #b09244;
+    background: #b09244; 
 }
 .card-content{
     text-align: center;
+    text-transform: uppercase;
     padding: 10px 0;
 }
 .card-title{
-    font-size: 25px;
+    font-size: 20px;
 }
 .category{
     padding: 5px 0;
 }
-
+.card-overlay{
+    background: rgba(0,0,0, 0.5);
+    font-size: 45px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+.card-overlay a{
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
 .copyright{
     width: 100%;
     text-align: center;
@@ -129,6 +152,15 @@ nav ul li a:hover::after{
 }
 .copyright i{
     color: #b09244;
+}
+
+@keyframes slideInleft{
+    from{
+        transform: translateX(-110%);
+    }
+    to{
+        transform: translateX(0);
+    }
 }
 
 /* -----------------RESPONSIVE------------- */
